--- a/index.html
+++ b/index.html
@@ -74,6 +74,18 @@
           </div>
           <div class="col-sm"></div>
           <div class="col-lg-auto">
+            <ul id="menuButtonList" class="hide">
+              <li>
+                <button id="menuButton" type="button">
+                  <img
+                    src="Images/Icons/hamburgerMenu.svg"
+                    title="Menu"
+                    alt="Menu Button"
+                  />
+                </button>
+              </li>
+            </ul>
+
             <ul id="navBarItems">
               <li class="navBarItem">
                 <a class="navBarTitles" href="#aboutMeSection"> ABOUT ME </a>
@@ -378,7 +390,7 @@
                       title="Info"
                       width="25rem"
                       height="25rem"
-                      alt="Info Buttonn"
+                      alt="More Info Button"
                     />
                   </button>
                 </div>
