Finished working on xs devices @media query. Fixed project images, navBar and more bugs

--- a/Projects/depoProject.html
+++ b/Projects/depoProject.html
@@ -45,7 +45,7 @@
   <body>
     <div id="newNavBar">
       <div id="navBarWrapper">
-        <div class="row row-cols-3">
+        <div class="row row-cols-3 spaceBetween">
           <div class="col-sm">
             <!-- Theme Changer Button -->
             <div id="themeChanger">
@@ -64,7 +64,7 @@
               <a class="myName" title="Home" href="#"> HARESH </a>
             </div>
           </div>
-          <div class="col-sm"></div>
+
           <div class="col-lg-auto">
             <ul id="goBackArrow">
               <li>
