--- a/Projects/myPortfolioProject.html
+++ b/Projects/myPortfolioProject.html
@@ -46,7 +46,7 @@
   <body>
     <div id="newNavBar">
       <div id="navBarWrapper">
-        <div class="row row-cols-3">
+        <div class="row row-cols-3 spaceBetween">
           <div class="col-sm">
             <!-- Theme Changer Button -->
             <div id="themeChanger">
@@ -65,7 +65,7 @@
               <a class="myName" title="Home" href="#"> HARESH </a>
             </div>
           </div>
-          <div class="col-sm"></div>
+
           <div class="col-lg-auto">
             <ul id="goBackArrow">
               <li>
