--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   <body>
     <div id="newNavBar">
       <div id="navBarWrapper">
-        <div class="row row-cols-3">
+        <div class="row row-cols-3 spaceBetween">
           <div class="col-sm">
             <!-- Theme Changer Button -->
             <div id="themeChanger">
@@ -66,15 +66,16 @@
                 />
               </button>
             </div>
+
             <div id="myName">
               <a class="myName" title="Home" href="#"> JADNELL </a>
               <br />
               <a class="myName" title="Home" href="#"> HARESH </a>
             </div>
           </div>
-          <div class="col-sm"></div>
+
           <div class="col-lg-auto">
-            <ul id="menuButtonList" class="hide">
+            <ul id="menuButtonList" class="hamburgerMenuHide">
               <li>
                 <button id="menuButton" type="button">
                   <img
@@ -86,7 +87,7 @@
               </li>
             </ul>
 
-            <ul id="navBarItems">
+            <ul id="navBarItems" class="hide">
               <li class="navBarItem">
                 <a class="navBarTitles" href="#aboutMeSection"> ABOUT ME </a>
               </li>
@@ -804,7 +805,7 @@
             <div class="col">
               <img
                 class="projectPictures"
-                src="Images/Project Pictures/ProjDepo1.png"
+                src="Images/Project Pictures/DEPO.png"
                 title="Depo Web Application Fines Tab."
                 alt="A picture of the DEPO Web Application Fines tab was supposed to appear here..."
               />
@@ -836,7 +837,7 @@
           <br /><br />
           <div class="row align-items-center">
             <!--Image of me-->
-            <div class="col">
+            <div class="col reverseColumns">
               <h2 class="projectTitle">My Portfolio:</h2>
 
               <div class="projectOverview">
@@ -860,114 +861,114 @@
             <div class="col">
               <img
                 class="projectPictures"
-                src="Images/Project Pictures/ProjDepo1.png"
+                src="Images/Project Pictures/DEPO.png"
                 title="My Portfolio (This Website)."
                 alt="A picture of My Portfolio was supposed to appear here..."
               />
             </div>
           </div>
+          <br />
+          <br />
+          <div class="row align-items-center">
+            <!--Image of me-->
+            <div class="col">
+              <img
+                class="projectPictures"
+                src="Images/Project Pictures/HQG.png"
+                title="Haresh Quiz Game Main Screen."
+                alt="A picture of Haresh Quiz Game was supposed to appear here..."
+              />
+            </div>
+            <div class="col">
+              <h2 class="projectTitle">Haresh Quiz Game:</h2>
+
+              <div class="projectOverview">
+                <h5>Overview:</h5>
+
+                Test your knowledge with Haresh Quiz Game! A simple game
+                developed for my Advanced Programming class using Python. Answer
+                20 questions to win. 3 lives, simple GUI, 3 versions: simple
+                logic, functions and classes.
+              </div>
+
+              <div class="learnMoreButton">
+                <button
+                  onclick="window.location.href='/jadnell555.github.io/Projects/hareshQuizGame.html';"
+                  title="More details about Haresh Quiz Game"
+                >
+                  More Details:
+                </button>
+              </div>
+            </div>
+          </div>
+          <br /><br />
+          <div class="row align-items-center">
+            <!--Image of me-->
+            <div class="col reverseColumns">
+              <h2 class="projectTitle">DC Motor Control:</h2>
+
+              <div class="projectOverview">
+                <h5>Overview:</h5>
+
+                Harnessing an Arduino board, C++ & keyboard inputs, we built a
+                system that commands a DC motor's speed! Watch it accelerate
+                using pulse width modulation, then take the wheel through your
+                keyboard.
+              </div>
+
+              <div class="learnMoreButton">
+                <button
+                  onclick="window.location.href='/jadnell555.github.io/Projects/dcMotorControlProject.html';"
+                  title="More details about DC Motor Control"
+                >
+                  More Details:
+                </button>
+              </div>
+            </div>
+            <div class="col">
+              <img
+                class="projectPictures"
+                src="Images/Project Pictures/DCM.png"
+                title="DC Motor Circuit with two Inputs."
+                alt="A picture of a DC Motor circuit was supposed to appear here..."
+              />
+            </div>
+          </div>
+
+          <br /><br />
+          <div class="row align-items-center">
+            <!--Image of me-->
+            <div class="col">
+              <img
+                class="projectPictures"
+                src="Images/Project Pictures/STM.png"
+                title="28byj-48 Step Motor and Arduino Connector."
+                alt="A picture of a 28byj-48 Step Motor and an Arduino Connector was supposed to appear here..."
+              />
+            </div>
+            <div class="col">
+              <h2 class="projectTitle">Step Motor Control:</h2>
+
+              <div class="projectOverview">
+                <h5>Overview:</h5>
+
+                This project used an Arduino & C++ to command a 28BYJ-48 geared
+                step motor. Control included clockwise/counter-clockwise
+                rotation (continuous & by steps) & stop function, all triggered
+                by keyboard commands. ️
+              </div>
+
+              <div class="learnMoreButton">
+                <button
+                  onclick="window.location.href='/jadnell555.github.io/Projects/stepMotorControlProject.html';"
+                  title="More details about Step Motor Control"
+                >
+                  More Details:
+                </button>
+              </div>
+            </div>
+          </div>
         </div>
-        <br />
-        <br />
-        <div class="row align-items-center">
-          <!--Image of me-->
-          <div class="col">
-            <img
-              class="projectPictures"
-              src="Images/Project Pictures/ProjHareshQuizGame1.png"
-              title="Haresh Quiz Game Main Screen."
-              alt="A picture of Haresh Quiz Game was supposed to appear here..."
-            />
-          </div>
-          <div class="col">
-            <h2 class="projectTitle">Haresh Quiz Game:</h2>
-
-            <div class="projectOverview">
-              <h5>Overview:</h5>
-
-              Test your knowledge with Haresh Quiz Game! A simple game developed
-              for my Advanced Programming class using Python. Answer 20
-              questions to win. 3 lives, simple GUI, 3 versions: simple logic,
-              functions and classes.
-            </div>
-
-            <div class="learnMoreButton">
-              <button
-                onclick="window.location.href='/jadnell555.github.io/Projects/hareshQuizGame.html';"
-                title="More details about Haresh Quiz Game"
-              >
-                More Details:
-              </button>
-            </div>
-          </div>
-        </div>
-        <br /><br />
-        <div class="row align-items-center">
-          <!--Image of me-->
-          <div class="col">
-            <h2 class="projectTitle">DC Motor Control:</h2>
-
-            <div class="projectOverview">
-              <h5>Overview:</h5>
-
-              Harnessing an Arduino board, C++ & keyboard inputs, we built a
-              system that commands a DC motor's speed! Watch it accelerate using
-              pulse width modulation, then take the wheel through your keyboard.
-            </div>
-
-            <div class="learnMoreButton">
-              <button
-                onclick="window.location.href='/jadnell555.github.io/Projects/dcMotorControlProject.html';"
-                title="More details about DC Motor Control"
-              >
-                More Details:
-              </button>
-            </div>
-          </div>
-          <div class="col">
-            <img
-              class="projectPictures"
-              src="Images/Project Pictures/ProjDCmotor1.png"
-              title="DC Motor Circuit with two Inputs."
-              alt="A picture of a DC Motor circuit was supposed to appear here..."
-            />
-          </div>
-        </div>
-
-        <br /><br />
-        <div class="row align-items-center">
-          <!--Image of me-->
-          <div class="col">
-            <img
-              class="projectPictures"
-              src="Images/Project Pictures/ProjStepMotor1.png"
-              title="28byj-48 Step Motor and Arduino Connector."
-              alt="A picture of a 28byj-48 Step Motor and an Arduino Connector was supposed to appear here..."
-            />
-          </div>
-          <div class="col">
-            <h2 class="projectTitle">Step Motor Control:</h2>
-
-            <div class="projectOverview">
-              <h5>Overview:</h5>
-
-              This project used an Arduino & C++ to command a 28BYJ-48 geared
-              step motor. Control included clockwise/counter-clockwise rotation
-              (continuous & by steps) & stop function, all triggered by keyboard
-              commands. ️
-            </div>
-
-            <div class="learnMoreButton">
-              <button
-                onclick="window.location.href='/jadnell555.github.io/Projects/stepMotorControlProject.html';"
-                title="More details about Step Motor Control"
-              >
-                More Details:
-              </button>
-            </div>
-          </div>
-        </div>
-
         <br />
         <br />
         <br />
@@ -1154,6 +1155,7 @@
       crossorigin="anonymous"
     ></script>
     <script src="scripts/themeChangerButton.js"></script>
+    <script src="scripts/menuButton.js"></script>
     <script src="scripts/animationsOnScroll.js"></script>
     <script src="scripts/contactForm.js"></script>
     <script src="https://s.pageclip.co/v1/pageclip.js" charset="utf-8"></script>
