Implemented @media queries for 425px, 768px and 1024px widths

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       media="screen"
     />
 
-    <!-- Stylesheet Link-->
+    <!-- Stylesheet Link -->
     <link
       id="theme"
       href="./Styles/lightDesign.css"
@@ -108,7 +108,7 @@
 
     <!-- LANDING SECTION -->
     <section id="landingSection">
-      <div class="wrapper">
+      <div class="wrapper animatedSection">
         <!-- Intro and Image -->
 
         <div class="container text-center">
@@ -153,7 +153,7 @@
     </section>
 
     <section id="aboutMeSection">
-      <div class="wrapper">
+      <div class="wrapper animatedSection">
         <br />
         <br />
         <br />
@@ -165,52 +165,52 @@
             licenses, among other information.
           </p>
         </div>
-
-        <div class="row">
-          <div class="col">
-            <div class="block">
-              <h5 class="blockTitles">More About Me</h5>
-              <ul id="moreAboutMe">
-                <li>
-                  My goal is to apply the knowledge and skills I've acquired to
-                  solve real life problems.
-                </li>
-                <!--
+        <div class="container text-center">
+          <div class="row">
+            <div class="col">
+              <div class="block">
+                <h5 class="blockTitles">More About Me</h5>
+                <ul id="moreAboutMe">
+                  <li>
+                    My goal is to apply the knowledge and skills I've acquired
+                    to solve real life problems.
+                  </li>
+                  <!--
                 <li>
                   Beyond work, I find joy in going to the beach, socializing with
                   friends, and playing basketball and videogames.
                 </li>
               -->
-                <li>
-                  Keep scrolling to learn about the technologies & hardware I
-                  have experience on. You can also find my projects and contact
-                  information.
-                </li>
-              </ul>
+                  <li>
+                    Keep scrolling to learn about the technologies & hardware I
+                    have experience on. You can also find my projects and
+                    contact information.
+                  </li>
+                </ul>
+              </div>
             </div>
-          </div>
 
-          <div class="col">
-            <div class="block">
-              <h5 class="blockTitles">Degrees, Licenses & Certifications</h5>
-              <div class="row">
-                <div class="col-4">
-                  <ul id="DLCyears">
-                    <li>2024~2032</li>
-                    <li>2023</li>
-                    <br />
-                    <li>2018</li>
-                  </ul>
-                </div>
-                <div class="col">
-                  <ul id="DLC">
-                    <li>Driver's License (Puerto Rico)</li>
-                    <li>
-                      Bachelor's Degree of Science in Computer Engineering,
-                      <i>cum laude</i>
-                    </li>
-                    <li>High School Diploma</li>
-                  </ul>
+            <div class="col">
+              <div class="block">
+                <h5 class="blockTitles">Degrees, Licenses & Certifications</h5>
+                <div class="row">
+                  <div class="col-4">
+                    <ul id="DLCyears">
+                      <li>2024~2032</li>
+                      <li>2023</li>
+                      <li>2018</li>
+                    </ul>
+                  </div>
+                  <div class="col">
+                    <ul id="DLC">
+                      <li>Driver's License (Puerto Rico)</li>
+                      <li>
+                        Bachelor's Degree of Science in Computer Engineering,
+                        <i>cum laude</i>
+                      </li>
+                      <li>High School Diploma</li>
+                    </ul>
+                  </div>
                 </div>
               </div>
             </div>
@@ -225,7 +225,7 @@
 
     <!-- EXPERTISE SECTION -->
     <section id="expertiseSection">
-      <div class="wrapper">
+      <div class="wrapper animatedSection">
         <br />
         <br />
         <br />
@@ -787,7 +787,7 @@
     </section>
     <!-- PROJECTS SECTION -->
     <section id="projectsSection">
-      <div class="wrapper">
+      <div class="wrapper animatedSection">
         <br />
         <br />
         <br />
@@ -976,7 +976,7 @@
     </section>
     <!-- CONTACT INFORMATION SECTION -->
     <section id="contactSection">
-      <div class="wrapper">
+      <div class="wrapper animatedSection">
         <br />
         <br />
         <br />
@@ -1068,7 +1068,7 @@
       </div>
     </section>
     <section id="socialMediaSection">
-      <div class="wrapper">
+      <div class="wrapper animatedSection">
         <div class="row align-items-center">
           <div class="col">
             <h3 id="socialMediaHeading">Social Media:</h3>
@@ -1142,7 +1142,7 @@
     </section>
     <!-- end contact section-->
     <footer>
-      <div class="wrapper">
+      <div class="wrapper animatedSection">
         Copyright © 2023. All Rights Reserved. Created by Jadnell H. Reyes
         P&eacute;rez
       </div>
