--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!-- Jadnell H. Reyes Pérez -->
-<!-- October 17th 2023 -->
+<!-- February 11th 2025 -->
 <!-- Version: 0.8 -->
 <?xml version = "1.0"?>
 <!DOCTYPE html PUBLIC "-//w3c//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
@@ -55,22 +55,12 @@
       <div id="navBarWrapper">
         <div class="row row-cols-3 spaceBetween">
           <div class="col-sm">
-            <!-- Theme Changer Button -->
-            <div id="themeChanger">
-              <button id="themeButton" type="button">
-                <img
-                  id="themeChangerButtonIcon"
-                  src="Images/Icons/moon.svg"
-                  title="Change Theme"
-                  alt="Theme changing button"
-                />
-              </button>
-            </div>
-
             <div id="myName">
-              <a class="myName" title="Home" href="#"> JADNELL </a>
+              <a class="myName" title="Home" href="#landingSection">
+                JADNELL
+              </a>
               <br />
-              <a class="myName" title="Home" href="#"> HARESH </a>
+              <a class="myName" title="Home" href="#landingSection"> HARESH </a>
             </div>
           </div>
 
@@ -88,9 +78,11 @@
             </ul>
 
             <ul id="navBarItems" class="hide">
+              <!--
               <li class="navBarItem">
                 <a class="navBarTitles" href="#aboutMeSection"> ABOUT ME </a>
               </li>
+              -->
               <li class="navBarItem">
                 <a class="navBarTitles" href="#expertiseSection"> EXPERTISE </a>
               </li>
@@ -100,6 +92,17 @@
               <li class="navBarItem">
                 <a class="navBarTitles" href="#contactSection"> CONTACT </a>
               </li>
+              <!-- Theme Changer Button -->
+              <div id="themeChanger">
+                <button id="themeButton" type="button">
+                  <img
+                    id="themeChangerButtonIcon"
+                    src="Images/Icons/moon.svg"
+                    title="Change Theme"
+                    alt="Theme changing button"
+                  />
+                </button>
+              </div>
             </ul>
           </div>
         </div>
@@ -117,7 +120,7 @@
             <div class="col">
               <img
                 class="mainPictures"
-                src="Images/Pictures/GRADUATION ME.jpg"
+                src="Images/Pictures/ME.png"
                 title="Hello! This is me"
                 alt="A picture of Jadnell Reyes was supposed to appear here..."
               />
@@ -132,13 +135,15 @@
 
               <div id="summary">
                 A Full Stack Web Developer, Designer and Engineer graduated from
-                the Polytechnic University of Puerto Rico.
+                the Polytechnic University of Puerto Rico. Keep scrolling or
+                press the button below to learn about the technologies &
+                hardware I have experience on, projects and more.
               </div>
 
               <div class="learnMoreButton">
                 <button
                   title="Learn More About Me"
-                  onclick="window.location.href='#aboutMeSection';"
+                  onclick="window.location.href='#expertiseSection';"
                 >
                   Learn More:
                 </button>
@@ -152,6 +157,7 @@
       </div>
     </section>
 
+    <!--
     <section id="aboutMeSection">
       <div class="wrapper animatedSection">
         <br />
@@ -180,7 +186,7 @@
                   Beyond work, I find joy in going to the beach, socializing with
                   friends, and playing basketball and videogames.
                 </li>
-              -->
+              
                   <li>
                     Keep scrolling to learn about the technologies & hardware I
                     have experience on. You can also find my projects and
@@ -222,7 +228,7 @@
         <br />
       </div>
     </section>
-
+-->
     <!-- EXPERTISE SECTION -->
     <section id="expertiseSection">
       <div class="wrapper animatedSection">
@@ -281,7 +287,7 @@
                   <div id="CNSA">
                     <b>High School Diploma</b>
                     <br />
-                    <i>Colegio Nuestra Se&ntilde;ora <br />de la Altagracia</i>
+                    <i>Colegio Nuestra Se&ntilde;ora de la Altagracia</i>
                     <br />
                     <ul class="educationLists">
                       <li>GPA: 4.0</li>
